--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="stylesheets/main.css">
 </head>
 <body>
-    
+    <script src="scripts/main.js"></script>
 </body>
 </html>
