--- a/index.html
+++ b/index.html
@@ -1,14 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ottergram</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css">
-    <link rel="stylesheet" href="stylesheets/main.css">
+    <meta charset="utf-8">
+    <title>otterrgram</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans">
+    <link rel="stylesheet" href="stylesheets/main.css" media="screen">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    <script src="scripts/main.js"></script>
+    <header class="main-header">
+        <h1 class="logo-text">ottergram</h1>
+    </header>
+    <main class="main-content">
+        <ul class="thumbnail-list">
+
+            <li class="thumbnail-item">
+                <a href="#"><img class="thumbnail-image" src="img/otter1.jpg" alt="Barry the Otter" /><span class="thumbnail-title">Barry</span></a>
+            </li>
+
+            <li class="thumbnail-item">
+                <a href="#"><img class="thumbnail-image" src="img/otter2.jpg" alt="Robin the Otter" /><span class="thumbnail-title">Robin</span></a>
+            </li>
+
+            <li class="thumbnail-item">
+                <a href="#"><img class="thumbnail-image" src="img/otter3.jpg" alt="Maurice the Otter" /><span class="thumbnail-title">Maurice</span></a>
+            </li>
+
+            <li class="thumbnail-item">
+                <a href="#"><img class="thumbnail-image" src="img/otter4.jpg" alt="Lesley the Otter" /><span class="thumbnail-title">Lesley</span></a>
+            </li>
+
+            <li class="thumbnail-item">
+                <a href="#"><img class="thumbnail-image" src="img/otter5.jpg" alt="Barbara the Otter" /><span class="thumbnail-title">Barbara</span></a>
+            </li>
+
+            <li class="thumbnail-item">
+                <a href="#"><img class="thumbnail-image" src="img/otter1.jpg" alt="Barry the Otter" /><span class="thumbnail-title">Barry</span></a>
+            </li>
+
+            <li class="thumbnail-item">
+                <a href="#"><img class="thumbnail-image" src="img/otter2.jpg" alt="Robin the Otter" /><span class="thumbnail-title">Robin</span></a>
+            </li>
+
+            <li class="thumbnail-item">
+                <a href="#"><img class="thumbnail-image" src="img/otter3.jpg" alt="Maurice the Otter" /><span class="thumbnail-title">Maurice</span></a>
+            </li>
+
+            <li class="thumbnail-item">
+                <a href="#"><img class="thumbnail-image" src="img/otter4.jpg" alt="Lesley the Otter" /><span class="thumbnail-title">Lesley</span></a>
+            </li>
+
+            <li class="thumbnail-item">
+                <a href="#"><img class="thumbnail-image" src="img/otter5.jpg" alt="Barbara the Otter" /><span class="thumbnail-title">Barbara</span></a>
+            </li>
+        </ul>
+
+        <div class="detail-image-container">
+            <div class="detail-image-frame">
+                <img class="detail-image" src="img/otter1.jpg" alt="">
+                <span class="detail-image-title">Stayin' Alive</span>
+            </div>
+
+        </div>
+    </main>
 </body>
+
 </html>
