--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <main class="main-content">
       <ul class="thumbnail-list">
-        <li class="thumbnail-item">
+        <!--<li class="thumbnail-item">
           <a href="img/otter1.jpg" data-image-role="trigger" data-image-title="Stayin' Alive" data-image-url="img/otter1.jpg">
             <img class="thumbnail-image" src="img/otter1.jpg" alt="Barry the Otter">
             <span class="thumbnail-title">Barry</span>
@@ -59,7 +59,7 @@
             <img class="thumbnail-image" src="img/otter5.jpg" alt="Barbara the Otter">
             <span class="thumbnail-title">Barbara</span>
           </a>
-        </li>
+        </li>-->
       </ul>
       <div class="detail-image-container">
         <div class="detail-image-frame">
